pv#112676 - fix theme tag overlaping

--- a/css/surcharge.css
+++ b/css/surcharge.css
@@ -2789,6 +2789,9 @@ body.article-program .article-wrapper .article-title .at-content {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 body.article-program .article-wrapper .article-title .at-content .at-main-title, body.article-program .article-wrapper .article-title .at-content .block.edito-custom h2, .block.edito-custom body.article-program .article-wrapper .article-title .at-content h2, body.article-program .article-wrapper .block.article-title .at-content h2 {
